# rc_car_obc

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  bluetooth_comm.c  bluetooth_comm.h  lidar.c  lidar.h  main.c  motor.c  motor.h  nrf24_comm.c  nrf24_comm.h  rf24_wrapper.cpp  rf24_wrapper.h
